[tool.poetry]
name = "resolv3r"
version = "0.0.1"
description = "A simple python package aimed at simplifying the vendor resolution process for network devices"
authors = ["hullabrian"]

[tool.poetry.dependencies]
python = "^3.10"
asyncssh = "^2.11.0"

[tool.poetry.dev-dependencies]
netmiko = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
